--- a/cGUI.Visual.Abstraction/cGUI.Visual.Abstraction.csproj
+++ b/cGUI.Visual.Abstraction/cGUI.Visual.Abstraction.csproj
@@ -2,5 +2,6 @@
   <ItemGroup>
     <ProjectReference Include="..\cGUI.Abstraction\cGUI.Abstraction.csproj" />
     <ProjectReference Include="..\cGUI.Event.Abstraction\cGUI.Event.Abstraction.csproj" />
+    <ProjectReference Include="..\cGUI.Events.Models\cGUI.Events.Models.csproj" />
   </ItemGroup>
 </Project>
