did spreading (unstable)

--- a/cGUI.Event.Extensions/cGUI.Event.Extensions.csproj
+++ b/cGUI.Event.Extensions/cGUI.Event.Extensions.csproj
@@ -2,5 +2,6 @@
   <ItemGroup>
     <ProjectReference Include="..\cGUI.Event.Abstraction\cGUI.Event.Abstraction.csproj" />
     <ProjectReference Include="..\cGUI.Visual.Abstraction\cGUI.Visual.Abstraction.csproj" />
+    <ProjectReference Include="..\cGUI.Visual\cGUI.Visual.csproj" />
   </ItemGroup>
 </Project>
