--- a/cGUI.Render.Abstraction/cGUI.Render.Abstraction.csproj
+++ b/cGUI.Render.Abstraction/cGUI.Render.Abstraction.csproj
@@ -1,2 +1,5 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  <ItemGroup>
+    <ProjectReference Include="..\cGUI.Abstraction\cGUI.Abstraction.csproj" />
+  </ItemGroup>
 </Project>
