start render implementation

--- a/cGUI.Animations/cGUI.Animations.csproj
+++ b/cGUI.Animations/cGUI.Animations.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\cGUI.Abstraction\cGUI.Abstraction.csproj" />
+    <ProjectReference Include="..\cGUI.Event.Abstraction\cGUI.Event.Abstraction.csproj" />
+    <ProjectReference Include="..\cGUI.Events.Models\cGUI.Events.Models.csproj" />
+  </ItemGroup>
+
 </Project>
