--- a/cGUI.Events.Models/cGUI.Events.Models.csproj
+++ b/cGUI.Events.Models/cGUI.Events.Models.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\cGUI.Event.Abstraction\cGUI.Event.Abstraction.csproj" />
+    <ProjectReference Include="..\cGUI.Render.Abstraction\cGUI.Render.Abstraction.csproj" />
   </ItemGroup>
 </Project>
