--- a/cGUI.Unity.Render.Extensions/cGUI.Unity.Render.Extensions.csproj
+++ b/cGUI.Unity.Render.Extensions/cGUI.Unity.Render.Extensions.csproj
@@ -5,5 +5,6 @@
   <ItemGroup>
     <ProjectReference Include="..\cGUI.Abstraction\cGUI.Abstraction.csproj" />
     <ProjectReference Include="..\cGUI.Math\cGUI.Math.csproj" />
+    <ProjectReference Include="..\cGUI.Render.Abstraction\cGUI.Render.Abstraction.csproj" />
   </ItemGroup>
 </Project>
