--- a/cGUI.Unity.Render/cGUI.Unity.Render.csproj
+++ b/cGUI.Unity.Render/cGUI.Unity.Render.csproj
@@ -1,9 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
-  <ItemGroup>
-    <PackageReference Include="UnityEngine.CoreModule" Version="2020.3.1" />
-  </ItemGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\cGUI.Render.Abstraction\cGUI.Render.Abstraction.csproj" />
     <ProjectReference Include="..\cGUI.Render.Contexts\cGUI.Render.Contexts.csproj" />
+    <ProjectReference Include="..\cGUI.Unity.Render.Extensions\cGUI.Unity.Render.Extensions.csproj" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <PackageReference Include="UnityEngine.CoreModule" Version="2020.3.1" />
   </ItemGroup>
 </Project>
