--- a/cGUI.Unity.Render/cGUI.Unity.Render.csproj
+++ b/cGUI.Unity.Render/cGUI.Unity.Render.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\cGUI.Render.Abstraction\cGUI.Render.Abstraction.csproj" />
-    <ProjectReference Include="..\cGUI.Render.Contexts\cGUI.Render.Contexts.csproj" />
+    <ProjectReference Include="..\cGUI.Unity.Render.Abstraction\cGUI.Unity.Render.Abstraction.csproj" />
     <ProjectReference Include="..\cGUI.Unity.Render.Extensions\cGUI.Unity.Render.Extensions.csproj" />
   </ItemGroup>
 	
