--- a/cGUI.Unity.Tests/cGUI.Unity.Tests.csproj
+++ b/cGUI.Unity.Tests/cGUI.Unity.Tests.csproj
@@ -5,6 +5,7 @@
     <ProjectReference Include="..\cGUI.Render.Contexts.Builder\cGUI.Render.Contexts.Builder.csproj" />
     <ProjectReference Include="..\cGUI.Render.Contexts\cGUI.Render.Contexts.csproj" />
     <ProjectReference Include="..\cGUI.Unity.Render.Abstraction\cGUI.Unity.Render.Abstraction.csproj" />
+    <ProjectReference Include="..\cGUI.Unity.Render.Builder\cGUI.Unity.Render.Builder.csproj" />
     <ProjectReference Include="..\cGUI.Unity.Render.Contexts\cGUI.Unity.Render.Contexts.csproj" />
     <ProjectReference Include="..\cGUI.Unity.Render.Extensions\cGUI.Unity.Render.Extensions.csproj" />
     <ProjectReference Include="..\cGUI.Unity.Render\cGUI.Unity.Render.csproj" />
@@ -14,8 +15,7 @@
 		<ItemGroup>
 			<ProjectReferenceAssemblies Include="%(ProjectReference.Filename).dll" />
 		</ItemGroup>
-		<Exec Command="ilrepack /out:@StandaloneBuild\$(TargetFileName) $(TargetFileName) @(ProjectReferenceAssemblies, ' ')"
-			  WorkingDirectory="$(OutputPath)" />
+		<Exec Command="ilrepack /out:@StandaloneBuild\$(TargetFileName) $(TargetFileName) @(ProjectReferenceAssemblies, ' ')" WorkingDirectory="$(OutputPath)" />
 	</Target>
 
 </Project>
