--- a/cGUI.Elements.BaseElements/cGUI.Elements.BaseElements.csproj
+++ b/cGUI.Elements.BaseElements/cGUI.Elements.BaseElements.csproj
@@ -1,9 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
+    <ProjectReference Include="..\cGUI.Convert.Extensions\cGUI.Convert.Extensions.csproj" />
+    <ProjectReference Include="..\cGUI.Elements.Models\cGUI.Elements.Models.csproj" />
     <ProjectReference Include="..\cGUI.Event.Abstraction\cGUI.Event.Abstraction.csproj" />
+    <ProjectReference Include="..\cGUI.Events.Models\cGUI.Events.Models.csproj" />
     <ProjectReference Include="..\cGUI.Layout.Options\cGUI.Layout.Options.csproj" />
     <ProjectReference Include="..\cGUI.Render.Contexts\cGUI.Render.Contexts.csproj" />
     <ProjectReference Include="..\cGUI.Unity.Render.Contexts\cGUI.Unity.Render.Contexts.csproj" />
+    <ProjectReference Include="..\cGUI.Unity.Render.Extensions\cGUI.Unity.Render.Extensions.csproj" />
     <ProjectReference Include="..\cGUI.Unity.Render\cGUI.Unity.Render.csproj" />
     <ProjectReference Include="..\cGUI.Visual.Abstraction\cGUI.Visual.Abstraction.csproj" />
     <ProjectReference Include="..\cGUI.Visual\cGUI.Visual.csproj" />
