--- a/cGUI.Assert/cGUI.Assert.csproj
+++ b/cGUI.Assert/cGUI.Assert.csproj
@@ -1,5 +1,1 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-	<ItemGroup>
-		<PackageReference Include="UnityEngine.CoreModule" Version="2020.3.1" />
-	</ItemGroup>
-</Project>
+﻿<Project Sdk="Microsoft.NET.Sdk" />
